# agedi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-tag.yml  publish.yml  python-package.yml
docs/: requirements.txt
docs/source/: concepts.rst  conf.py  index.rst  installation.rst  overview.rst  references.rst  troubleshooting.rst  tutorial.rst
docs/source/images/: make_images.sh
docs/source/tutorial/: api.rst  cli.rst  objects.rst  pdo.rst  python_api.rst  train_hydra.rst  tutorial.rst
docs/tutorial_data/: PdO_training_data.traj  template.traj
logs/version_0/: events.out.tfevents.1776700620.runnervmeorf1.4213.0  hparams.yaml
logs/version_0/checkpoints/: last_model.ckpt
logs/version_1/: events.out.tfevents.1776700644.runnervmeorf1.4258.0  hparams.yaml
logs/version_1/checkpoints/: last_model.ckpt
pull_requests/12/review_comments/: 3126037988_reply.txt
src/agedi/: __init__.py  functional.py
src/agedi/api/: __init__.py  _display.py  _registry.py  dataset.py  diffusion.py  prediction.py  sampling.py  training.py
src/agedi/cli/: inspect.py  main.py  predict.py  sample.py  train.py  train_hydra.py
src/agedi/conf/: train.yaml
src/agedi/data/: __init__.py  atoms_graph.py  callbacks.py  dataset.py  transforms.py
src/agedi/diffusion/: __init__.py  agedi.py  diffusion.py  guidance.py  sampler.py
src/agedi/models/: __init__.py  head.py  regressor.py  score.py  translator.py
src/agedi/utils/: truncated_normal.py
tests/: conftest.py  test_functional.py
tests/data/: test_atoms_graph.py  test_callbacks.py  test_dataset.py  test_dataset_extended.py  test_neighborlist.py  test_transforms.py
tests/diffusion/: test_diffusion.py  test_diffusion_extended.py  test_sampler.py
tests/diffusion/distributions/: test_categorical.py  test_constant_uniform.py
tests/models/: test_head_conditioning_extras.py  test_regressor.py
tests/utils/: test_truncated_normal.py
(+40 files in other folders)
