[project]
name = "AGeDi"
version = "1.0.0"
description = "Atomistic Generative Diffusion software package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "lightning",
    "torch_geometric",
    "torch-ema",
    "tensorboard",
    "numpy",
    "ase",
    "rich-click",
    "hydra-core",
]

[project.optional-dependencies]
full = [
    "schnetpack @ git+https://github.com/atomistic-machine-learning/schnetpack.git",
    "nvalchemi-toolkit-ops[torch]",
]
test = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pytest-mock",
    "mypy",
]

[project.scripts]
agedi = "agedi.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ['--cov-report', 'term',
            '--cov-report', 'html:.coverage-html',
            '--cov-report', 'xml:.coverage.xml',
            '--junitxml', '.report.xml',
            '--cov', 'src/agedi']
